--- a/Full Stack - Danki Code/5. Projeto I - HTML & CSS/style/styles.css
+++ b/Full Stack - Danki Code/5. Projeto I - HTML & CSS/style/styles.css
@@ -7,6 +7,7 @@
 
 /*  Boot    */
 img{
+    max-width: 380px;
     width: 100%;
 }
 
@@ -24,6 +25,7 @@ img{
 /* 3 box na mesma fileira*/
 .w33{
     width: 33.3%;
+    padding: 0 10px;
 }
 
 .left{
@@ -142,7 +144,7 @@ section.banner-principal form input[type=submit]{
 }
 
 section.quem-somos{
-    padding: 30px 0;
+    padding: 40px 0;
 }
 
 section.quem-somos h2{
@@ -153,8 +155,104 @@ section.quem-somos h2{
 
 section.quem-somos p {
     font-size: 16px;
+    font-weight: 300;
     color: #444;
     margin-top: 10px;
+}
+
+section.especialidades{
+    padding: 40px 0; 
+    background: #E2E2E2;
+}
+
+section.especialidades .title{
+    font-size: 30px;
+    text-align: center;
+    font-weight: 400;
+    color: #999;
+}
+
+.box-especialidade{
+
+    margin: 40px 0;
+    padding: 0 30px;
+    text-align: center;
+
+}
+
+.box-especialidade h3{
+    font-size: 40px;
+    color: #404580;
+}
+
+.box-especialidade h4{
+    font-size: 30px;
+    font-weight: 400;
+    color: #BABABA;
+}
+
+.box-especialidade p {
+    color: #444;
+    font-size: 18px;
+    margin-top: 10px;
+}
+
+section.extras {
+    padding: 30px 0;
+    background: #404580;
+}
+
+.panel-servicos,.panel-depoimentos{
+    padding: 0 50px;
+}
+
+section.extras .title{
+    color: white;
+    font-weight: 300;
+    font-size: 25px;
+    margin-bottom: 15px;        
+}
+
+.depoimento-single{
+    padding: 15px 0;
+    border-bottom: 2px solid #5156a3;
+}
+
+p.depoimentos-descricao{
+    font-size: 15px;
+    color: white;
+    font-weight: 300;
+}
+
+p.nome-autor{
+    font-size: 15px;
+    color: white;
+    margin-top: 5px;
+    font-weight: bold;
+}
+
+.servicos ul{
+    margin: 20px 0;
+    /*list-style-position: inside;*/
+}
+
+.servicos li {
+    margin-bottom: 15px;
+    font-size: 15px;
+    color: white;
+    font-weight: 300;
+}
+
+footer{
+    background: #313462;
+    padding: 30px 0;
+}
+
+footer p {
+    color: white;
+    text-align: center;
+    font-weight: 400;
+    font-size: 15px;
 }
 
 /*Aplicando design responsivo para mobile*/
@@ -165,13 +263,29 @@ section.quem-somos p {
         max-width: 500px;
         float: none !important;
     }
+
     .w50{
         padding: 20px;
         width: 100%;
     }
+
+    .w33{
+        width: 100%;
+        padding: 20px;
+    }
+
+    .box-especialidade {
+        margin: 0;
+        padding: 40px 20px;
+    }
+
 }
 
 @media screen and (max-width: 700px){
+    img{
+        max-width: 300px;
+    }
+
     nav.desktop{
         display: none;
     }
