--- a/Full Stack - Danki Code/5. Projeto I - HTML & CSS/style/styles.css
+++ b/Full Stack - Danki Code/5. Projeto I - HTML & CSS/style/styles.css
@@ -49,7 +49,11 @@ header{
 }
 
 header .logo{
-    font-size: 23px;
+    font-size: 23px; 
+}
+
+.logo a{
+    text-decoration: none;
     color: white;
 }
 
