--- a/Projeto I/style/styles.css
+++ b/Projeto I/style/styles.css
@@ -6,6 +6,11 @@
 }
 
 /*  Boot    */
+html, body{
+    overflow-x: hidden;
+    height: 100%;
+}
+
 img{
     max-width: 380px;
     width: 100%;
@@ -206,6 +211,7 @@ section.extras {
     background: #404580;
 }
 
+
 .panel-servicos,.panel-depoimentos{
     padding: 0 50px;
 }
@@ -252,12 +258,79 @@ footer{
     padding: 30px 0;
 }
 
+footer.fixed{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
 footer p {
     color: white;
     text-align: center;
     font-weight: 400;
     font-size: 15px;
 }
+
+.erro-404{
+    margin: 50px 0;
+    font-size: 50px;
+    width: 90%;
+    left: 50%;
+    text-align: center;
+    transform: translate(7%,-10%);
+    -ms-transform: translate(7%, -10%);
+}
+
+/*Página contato*/
+
+#map{
+    width: 100%;
+    height: 600px;
+}
+
+.contato-container{
+    text-align: center;
+    padding: 10px 0;
+}
+
+.contato-container input[type=text]{
+    margin: 2px 0;
+    width: 100%;
+    height: 30px;
+    padding-left: 8px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    color: #444;
+    max-width: 500px;
+
+}
+
+.contato-container textarea{
+    padding: 5px;
+    margin: 8px 0;
+    width: 100%;
+    height: 120px;
+    padding-left: 8px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    color: #444;
+    max-width: 500px;
+    resize: none;
+}
+
+.contato-container input[type=submit]{
+    background: #474d4b;
+    text-transform: uppercase;
+    text-shadow: #333 #333;
+    width: 140px;
+    margin: 0 auto;
+    height: 30px;
+    color: white;
+    border: none;
+    font-weight: 600;
+    cursor: pointer;
+}
+
 
 /*Aplicando design responsivo para mobile*/
 @media screen and (max-width: 768px){
