--- a/Projeto I/style/styles.css
+++ b/Projeto I/style/styles.css
@@ -88,30 +88,61 @@ nav.desktop {
     text-decoration: none;
 }
 
-section.banner-principal{
+section.banner-container{
     width: 100%;
     height: 600px;
-    z-index: 1;
-    background-image: url('../img/banner-computer.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
     position: relative;
 
 }
 
-section.banner-principal form{
+.banner-single{
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;  
+    background-position: center;
+    
+}
+
+.banner-single:nth-child(1){
+    background-image: url(../img/banner-1.jpg);
+}
+
+.banner-single:nth-child(2){
+    background-image: url(../img/banner-2.jpg);
+}
+
+.banner-single:nth-child(3){
+    filter: grayscale(70%);
+    background-image: url(../img/banner-3.jpg);
+}
+
+.overlay{
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    background: rgba(51, 51, 51, 0.4)
+}
+
+section.banner-container form{
     width: 92%;
     max-width: 600px;
     position: absolute;
-    z-index: 2;
+    z-index: 3;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
 
-section.banner-principal form h2{
+section.banner-container form h2{
 
     color: white;
     font-weight: 300;
@@ -120,7 +151,7 @@ section.banner-principal form h2{
 
 }
 
-section.banner-principal form input[type=email]{
+section.banner-container form input[type=email]{
     width: 100%;
     height: 50px;
     background: white;
@@ -132,7 +163,7 @@ section.banner-principal form input[type=email]{
 
 }
 
-section.banner-principal form input[type=submit]{
+section.banner-container form input[type=submit]{
     width: 100%;
     height: 50px;
     background: #474d4b;
@@ -146,14 +177,7 @@ section.banner-principal form input[type=submit]{
 
 }
 
-.overlay{
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(51, 51, 51, 0.4)
-}
+
 
 section.quem-somos{
     padding: 40px 0;
@@ -334,6 +358,29 @@ footer p {
     cursor: pointer;
 }
 
+.bullets{
+    position: absolute;
+    z-index: 5;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.bullets span{
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    cursor: pointer;
+    background-color: #ccc;
+    margin: 0 5px;
+    /*background-color: #222;*/
+
+}
+
+.bullets span.active-slider{
+    background-color: white;
+}
 
 /*Aplicando design responsivo para mobile*/
 @media screen and (max-width: 768px){
