Redimensionamento abaixo de 768px

--- a/Projeto I/painel/css/styles.css
+++ b/Projeto I/painel/css/styles.css
@@ -90,7 +90,12 @@ header{
     color: white;
 }
 
+.menu-wraper{
+    width: 300px;
+}
+
 div.menu{
+    overflow-x: hidden;
     overflow-y: auto;
     height: 100%;
     padding: 10px;
@@ -172,3 +177,17 @@ div.box-usuario{
 
 /*medias*/
 
+@media screen and (max-width: 768px){
+    .menu{
+        display: none;
+    }
+    .content{
+        width: 100%;
+        left: 0;
+    }
+    header{
+        left: 0;
+        width: 100%;
+    }
+
+}
