--- a/Projeto I/painel/css/styles.css
+++ b/Projeto I/painel/css/styles.css
@@ -1,172 +1,146 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: "Open Sans";
 }
 
-html, body{
-    height: 100%;
-    background: rgb(225, 225, 225);
+
+
+html,body{
+	height: 100%;
+	background: rgb(225,225,225);
 }
 
 body{
-
-    overflow-x: hidden;
-
+	overflow-x: hidden;
 }
 
+
+/*Página de login*/
 .box-login{
-    max-width: 600px;
-    width: 95%;
-    padding: 70px 2%;
-    background: white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    box-shadow: 10px 10px 5px rgb(200, 200, 200);
+	box-shadow: 10px 10px 5px rgb(200,200,200);
+	max-width: 600px;
+	width: 95%;
+	padding: 60px 2%;
+	background: white;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
+	-ms-transform:translate(-50%,-50%);
+}
+
+.box-login h2{
+	text-align: center;
+	font-size: 19px;
+	text-transform: uppercase;
+	font-weight: normal;
+	margin:10px 0;
+	color: black;
 }
 
 .box-login input[type=text],
-.box-login input[type=password]{
-    width: 100%;
-    height: 40px;
-    border: 1px solid #ccc;
-    padding-left: 8px;
-    margin-top: 8px;
+.box-login input[type=password]
+{
+	width: 100%;
+	height: 40px;
+	border: 1px solid #ccc;
+	padding-left: 8px;
+	margin-top:8px;
 }
 
 .box-login input[type=submit]{
-    width: 100px;
-    height: 40px;
-    cursor: pointer;
-    margin-top: 8px;
-    background: #477c6f;
-    color: white;
-    border: 0;
-    font-size: 0.9rem;
+	width: 100px;
+	height: 40px;
+	cursor: pointer;
+	margin-top: 10px;
+	font-size: 14px;
+	background: #00bfa5;
+	color: white;
+	border: 0;
 }
 
-.error-box{
-    height: 45px;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    background: rgba(252, 70, 64, 0.685);  
-    font-size: 0.8rem;
-    font-weight: 500;
-    text-shadow: 0px 1px rgba(88, 88, 88, 0.404);
-    color: rgb(54, 54, 54);
-    text-transform: uppercase;
-    border-radius: 5px;
-    padding-right: 4px 2%;
+
+/*Box erro do painel*/
+
+.erro-box{
+	width: 100%;
+	padding: 8px 2%;
+	text-align: center;
+	background: #F75353;
+	color: white;
+	font-size: 15px;
 }
 
-/*Painel de Controle*/
+/*Fim página login*
 
-.clear{ clear: both;}
-.center{ max-width: 1280px; padding: 0 2%; margin: 0 auto;}
+/*Painel de controle*/
+
+.clear{clear:both;}
+
+.center{padding:0 2%;margin:0 auto;}
 
 
-
-header{
-    /*float: left;*/
-    position: relative;
-    left: 300px;
-    padding: 10px 0;
-    background: #78909c;
-    width: calc(100% - 300px);
-
-}
 
 .loggout{
-    float: right;
+	float: right;
 }
 
 .loggout a{
-    color: white;
-    font-size: 20px;
+	padding: 0 20px;
+	position: relative;
+	top: 4px;
+	text-decoration: none;
+	color: white;
+	font-size: 16px;
+}
+
+.loggout a > span{
+	font-size: 16px;
+	text-decoration: none;
 }
 
 .menu-btn{
-    float: left;
-    cursor: pointer;
-    font-size: 23px;
-    color: white;
+	float: left;
+	cursor: pointer;
+	font-size: 23px;
+	color: white;
 }
 
-.menu-wraper{
-    width: 300px;
-}
+
+.menu-wraper{width:250px;}
 
 div.menu{
-    overflow-x: hidden;
-    overflow-y: auto;
-    height: 100%;
-    padding: 10px;
-    background: #455a64;
-    float: left;
-    width: 300px;
-    position: fixed;
-    left: 0;
-    top: 0;
+	overflow-x:hidden;
+	overflow-y: auto;
+	height: 100%;
+	padding:10px 0;
+	position: fixed;
+	left: 0;
+	top: 0;
+	background: #455a64;
+	float: left;
+	width: 250px;
 }
 
-div.box-usuario{
-    text-align: center;
 
+header{
+	position: relative;
+	left: 250px;
+	padding: 10px 0;
+	background: #78909c; 
+	width: calc(100% - 250px);
 }
 
-.avatar-usuario{
-    text-align: left;
-    width: 125px;
-    height: 125px;
-    border-radius: 50%;
-    display: inline-block;
-    border: 3px solid #2F3D42;
+.content{
+	width: calc(100% - 250px);
+	position: relative;
+	left: 250px;
+	padding: 2%;
 }
 
-.avatar-usuario i {
-    position: relative;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    font-size: 50px;
-    color: #2F3D42;
 
-}
-
-.imagem-usuario{
-    width: 130px;
-    height: 130px;
-    display: inline-block;
-    position: relative;
-    border-radius: 50%;
-    border: 3px solid #2F3D42;
-    
-}
-
-.imagem-usuario img{
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-}
-
-.nome-usuario{
-    text-align: center;
-    margin-top: 10px;
-}
-
-.nome-usuario p{
-    color: white;
-    font-size: 16px;
-    font-weight: lighter;
-}
 
 .items-menu{
 	margin-top: 30px;
@@ -191,43 +165,89 @@ div.box-usuario{
 	border-bottom: 2px solid #2F3D42;
 }
 
-/*Box Metricas*/
 
-.box-metricas{
-	margin-top:16px;
-	padding:0 15px;
+div.box-usuario{
+	padding: 8px;
+	text-align: center;
 }
 
-.box-metrica-single{
-	float: left;
-	position: relative;
-	width: 33.3%;
-	background: #F4B03E;
-	border: 5px solid white;
-}
-
-.box-metricas .box-metrica-single:nth-of-type(2){
-	background: #E05C4E;
-}
-
-.box-metricas .box-metrica-single:nth-of-type(3){
-	background: #0091ea;
-}
-
-.box-metrica-wraper{
-	padding: 10px 20px;
+.avatar-usuario{
 	text-align: left;
+	display: inline-block;
+	width: 130px;
+	height: 130px;
+	border-radius: 50%;
+	border: 3px solid #2F3D42;
+}
+
+.avatar-usuario i{
+	position: relative;
+	left: 50%;
+	top: 50%;
+	transform:translate(-50%,-50%);
+	-ms-transform:translate(-50%,-50%);
+	font-size: 50px;
+	color: #2F3D42;
+}
+
+.imagem-usuario{
+	display: inline-block;
+	width: 130px;
+	height: 130px;
+	position: relative;
+	border-radius: 50%;
+	border: 3px solid #2F3D42;
+}
+
+.imagem-usuario img{
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+}
+
+.nome-usuario{
+	text-align: center;
+	margin-top: 10px;
+}
+
+.nome-usuario p{
 	color: white;
+	font-size: 15px;
+	font-weight: normal;
 }
 
-.box-metrica-wraper h2{
-	font-size: 28px;
+/*Conteúdo principal do painel*/
+
+.w100{
+	width: 100%;
 }
 
-.box-metrica-wraper p{
-	padding: 10px 0;
-	font-size: 26px;
+.w50{
+	width: 49%;
 }
+
+.left{
+	float: left;
+}
+
+.right{
+	float: right;
+}
+
+.box-content{
+	background: white;
+	padding: 30px;
+	margin-bottom: 25px;
+}
+
+.box-content h2{
+	font-weight: 300;
+	font-size: 23px;
+}
+
 
 /*Tabelas*/
 
@@ -274,6 +294,7 @@ a.btn.edit{background: #F4B03E;}
 a.btn.delete{background: #E05C4E;}
 a.btn.order{background: #0091ea;}
 
+
 /*Paginacao*/
 
 .paginacao{
@@ -293,6 +314,43 @@ a.btn.order{background: #0091ea;}
 
 .paginacao a.page-selected{
 	background: rgb(220,220,220);
+}
+/*Box Metricas*/
+
+.box-metricas{
+	margin-top:16px;
+	padding:0 15px;
+}
+
+.box-metrica-single{
+	float: left;
+	position: relative;
+	width: 33.3%;
+	background: #F4B03E;
+	border: 5px solid white;
+}
+
+.box-metricas .box-metrica-single:nth-of-type(2){
+	background: #E05C4E;
+}
+
+.box-metricas .box-metrica-single:nth-of-type(3){
+	background: #0091ea;
+}
+
+.box-metrica-wraper{
+	padding: 10px 20px;
+	text-align: left;
+	color: white;
+}
+
+.box-metrica-wraper h2{
+	font-size: 28px;
+}
+
+.box-metrica-wraper p{
+	padding: 10px 0;
+	font-size: 26px;
 }
 
 /*Tabela Responsiva*/
@@ -321,42 +379,119 @@ a.btn.order{background: #0091ea;}
 }
 
 
+/*Formulários de contato do box-content*/
 
-/* Conteúdo do Painel   */
-
-.w100{
-    width: 100%;
+.box-content form{
+	margin:30px 0;
 }
 
-.w50{
-    width: 48%;
+.box-content form label{
+	font-size: 17px;
+	font-weight: 300;
+	color: black;
+	display: block;
 }
 
-.left{
-    float: left;
+.box-content .form-group{
+	margin:15px 0;
 }
 
-.right{
-    float: right;
+.box-content form input[type=text],
+.box-content form input[type=password]
+{
+	margin-top:8px;
+	font-size: 16px;
+	font-weight: normal;
+	color: black;
+	width: 100%;
+	height: 40px;
+	border: 1px solid #ccc;
+	padding-left: 8px;
 }
 
-.content{
-    width: calc(100% - 300px);
-    position: relative;
-    left: 300px;
-    padding: 10px;
+.box-content form textarea{
+	margin-top:8px;
+	font-size: 16px;
+	font-weight: normal;
+	color: black;
+	width: 100%;
+	height: 150px;
+	border: 1px solid #ccc;
+	padding: 8px;
+	resize: vertical;
 }
 
-.box-content{
-    background: white;
-    padding: 10px;
-    margin-bottom: 10px;
+.box-content form select{
+	margin-top:8px;
+	font-size: 16px;
+	font-weight: normal;
+	color: black;
+	width: 100%;
+	height: 40px;
+	border: 1px solid #ccc;
+	padding-left: 8px;
+}
+
+.box-content form input[type=file]{
+	margin-top:8px;
+	width: 100%;
+	padding: 8px;
+	border: 1px solid #ccc;
+}
+
+.box-content form input[type=submit]{
+	width: 100px;
+	height: 40px;
+	cursor: pointer;
+	margin-top: 10px;
+	font-size: 16px;
+	background: #00bfa5;
+	color: white;
+	border: 0;
+}
+
+/*Box de alerta!*/
+
+.box-alert{
+	width: 100%;
+	padding:8px 0;
+	text-align: center;
+}
+
+.sucesso{
+	background: #a5d6a7;
+	color: white;
+}
+
+.erro{
+	background: #F75353;
+	color: white;
+}
+
+/*Menu selecionado*/
+.menu-active{
+	background: #3a4b51;
+}
+
+.menu-active::before{
+	/*
+		Adicionar Seta para qd estiver selecionado.
+	*/
 }
 
 
 
+.form-group-login label{
+	font-size: 13px;
+	padding-right: 6px;
+	font-weight: 300;
+	color: black;
+}
 
-/*medias*/
+form .form-group-login:nth-of-type(2){
+	position: relative;
+	top: 10px;
+}
 
 @media screen and (max-width: 1024px){
 	.box-metrica-single{
